--- a/UI/CrestronInterface/src/App.css
+++ b/UI/CrestronInterface/src/App.css
@@ -32,8 +32,51 @@
     padding: 1rem;
     background-color: #333;
     border-radius: 0.5rem;
+    width: 30vw;
 }
 
 .Slider {
-    width: 20rem;
+    color: #01178a;
+      height: 1rem;
+      width: 100%;
+      padding: 16px 0;
+      display: inline-flex;
+      align-items: center;
+      position: relative;
+      cursor: pointer;
+      touch-action: none;
+      -webkit-tap-highlight-color: transparent;
+}
+.Slider-rail {
+    display: block;
+      position: absolute;
+      width: 100%;
+      height: 1.25rem;
+      border-radius: 0.5rem;
+      background-color: currentColor;
+      opacity: 0.3;
+}
+.Slider-track {
+    display: block;
+      position: absolute;
+      height: 1rem;
+      border-radius: 0.5rem;
+      background-color: currentColor;
+}
+.Slider-thumb {
+    display: flex;
+      align-items: center;
+      justify-content: center;
+      position: absolute;
+      width: 1.25rem;
+      height: 2rem;
+      margin-left: -6px;
+      box-sizing: border-box;
+      border-radius: 1rem;
+      outline: 0;
+      background-color: #01178a;
+      transition-property: box-shadow, transform;
+      transition-timing-function: ease;
+      transition-duration: 120ms;
+      transform-origin: center;
 }
